--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.servlet.multipart.max-request-size=-1
 #Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mudarhussain52@gmail.com
-spring.mail.password=lzhqrvkmbhvwoobl
+spring.mail.username=<your email id>
+spring.mail.password=<SMTP mail code>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
